# A-g-e-n-t-i-c-

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  conventional-commits.yml  release.yml
demo/: benchmark.py
demo/traces/: benchmark-report.json
demo/use_cases/: incident-triage.md  research-assistant.md  workflow-automation.md
docs/: architecture.md  postmortem.md
scripts/: run.sh
src/agentic/: __init__.py  executor.py  orchestrator.py  planner.py  tool_adapters.py
src/agentic_ai/: __init__.py  __main__.py  api.py  cli.py  errors.py  main.py  resilience.py
src/agentic_ai/api/: models.py  service.py
src/agentic_ai/memory/: __init__.py  store.py
src/agentic_ai/observability/: __init__.py  logging.py  metrics.py  runtime.py  structured_logging.py  tracing.py
src/agentic_ai/orchestrator/: __init__.py  core.py  critic.py  engine.py  state.py
src/agentic_ai/providers/: simple_provider.py
src/agentic_ai/tools/: __init__.py  executor.py  policy.py  registry.py  schemas.py  word_count.py
src/pydantic/: __init__.py
tests/: test_main_flow.py  test_resilience_and_tools.py
tests/integration/: test_orchestration_loop.py
tests/unit/: test_executor.py  test_planner.py  test_tool_adapters.py
